--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "firebase": "^10.12.2",
     "flowbite-react": "^0.9.0",
+    "jodit-react": "^4.1.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
